Updated user interface for issue list

--- a/issues.html
+++ b/issues.html
@@ -9,6 +9,7 @@
   <body>
     <main>
       <h1>Aktuella support ärenden</h1>
+      <section id="issueList"></section>
     </main>
   </body>
 </html>
