--- a/issues.html
+++ b/issues.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/issues.css" />
     <script type="module" src="./issues.js" defer></script>
     <title>Support ärenden</title>
   </head>
   <body>
     <main>
-      <h1>Aktuella support ärenden</h1>
-      <section id="issueList"></section>
+      <article class="container">
+        <h1>Aktuella support ärenden</h1>
+        <section id="issueList"></section>
+      </article>
     </main>
   </body>
 </html>
