--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <main>
       <article class="container">
         <h1>Ange ditt ärende nedan i formuläret</h1>
-        <h4>Vi återkommer så fort vi kan</h4>
         <form>
           <div class="form-control">
             <label for="email">E-post</label
@@ -22,7 +21,7 @@
             ><input required type="text" name="caption" id="caption" />
           </div>
           <div class="form-control">
-            <label for="description"></label
+            <label for="description">Beskrivning av ärendet</label
             ><textarea required name="description" id="description"></textarea>
           </div>
           <div class="form-control">
@@ -30,6 +29,21 @@
           </div>
         </form>
       </article>
+      <section class="modal hidden">
+        <button class="close-modal">&times;</button>
+        <div class="modal-container">
+          <h2>Tack för att ni kontaktade oss</h2>
+          <p>
+            Vi återkommer så snabbt vi kan, för att komma i kontakt med oss ring
+            kundtjänst på följande nummer: 010-11 22 33 45
+          </p>
+          <p>
+            Ange följande ärendenummer vid kontakt:
+            <span id="issue-number">1</span>
+          </p>
+        </div>
+      </section>
+      <section class="overlay hidden"></section>
     </main>
   </body>
 </html>
